# safe-control-gym

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  action_test.py  pyproject.toml  setup.py  test.py  tutorial.md
.github/workflows/: pre-commit.yml  push.yml  static_code_analysis.yml
aer-course-project/: aer_course_project.py  edit_this.py  example_custom_utils.py  final_project.py  getting_started.py  getting_started.yaml  project_utils.py
benchmarking_sim/: hpo.sh
benchmarking_sim/cartpole/: mb_experiment.py
benchmarking_sim/hpo/: gpmpc_acados_hp_evaluation.sh  hp_study_analysis.ipynb  ilqr_hp_evaluation.sh  plot_traj_dist.py
benchmarking_sim/quadrotor/: gpmpc_experiment.py  mb_experiment.py  mb_experiment_noise.py  mb_experiment_rollout.py  mb_noise.sh  plot_hull.py  plot_radar.py
competition/: competition_utils.py  create_buffer.py  custom_utils.py  edit_this.py  edit_this_base.py  edit_this_base_c.py  example_custom_utils.py  getting_started.py  getting_started.yaml  getting_started_base.py  getting_started_crazyswarm.py  getting_started_my.py  level0.yaml  level1.yaml  level2.yaml  level3.yaml  levelh.yaml  slam.py  utils.py  utis.py
competition/models/: 1013_1200_actor  1013_1200_actor_optimizer  1013_1200_critic  1013_1200_critic_optimizer
competition/safetyplusplus_folder/: log_utils.py  networks.py  plus_logger.py  replay_buffer.py  safetyplusplus.py  slam.py  unconstrained.py
competition/submit_models/: 1016_01_1800_actor  1016_01_1800_actor_optimizer  1016_01_1800_critic  1016_01_1800_critic_optimizer
dev-sim2real/: bag_to_csv.py  compare_sim2real.py  getting_started.py  save_average_run.py  sim_data_utils.py  trial_data_utils.py  view_trial.py
dev-sim2real/ellipse/: edit_this.py  getting_started.yaml
dev-sim2real/hypotrochoid/: edit_this.py  getting_started.yaml
dev-sim2real/line/: edit_this.py
dev-sim2real/slalom/: edit_this.py  (+1 more)
examples/: 3d_quad.py  3d_quad.yaml  execute_rl_controller.py  getting_started.py  getting_started.yaml  quad_3D.py  quad_3D.yaml  read_results_data.py  tracking.py  tracking.yaml  tutorial.md  verbose_api.py  verbose_api.yaml
experiments/: README.md  bag_to_csv.py  compare_sim2real.py  fit_firmware_wrapper.py  getting_started.py  main.py  playback.py  save_average_run.py  trial_data_utils.py  view_trial.py
lab1/: README.md  edit_this.py  example_custom_utils.py  getting_started.yaml  project_utils.py
lab2/: README.md  edit_this.py  geo_controller.py  lab2.yaml  main.py  planner.py  plot.ipynb  project_utils.py  requirements.txt
lab3/: .gitignore  README.md  lab3_main.py  process_image.ipynb
safe_control_gym/: __init__.py  experiment.py  explore_experiment.py
tests/: test_build.py
walkthroughs/: add-a-new-controller.md  tutorial.md
(+854 files in other folders)
