[tool.poetry]
name = "safe-control-gym"
version = "2.0.0"
description = "PyBullet CartPole and Quadrotor environments—with CasADi symbolic a priori dynamics—for learning-based control and RL"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.5.1"
Pillow = "^9.0.0"
munch = "^2.5.0"
PyYAML = "^6.0"
imageio = "^2.14.1"
dict-deep = "^4.1.2"
scikit-optimize = "^0.9.0"
gymnasium = "^0.28"
torch = "^1.10.2"
gpytorch = "^1.6.0"
tensorboard = "^2.12.0"
casadi = "^3.6.0"
pybullet = "^3.2.0"
numpy = "^1.22.1"
cvxpy = "^1.1.18"
pytope = "^0.0.4"
Mosek = "^10.0.18"
termcolor = "^1.1.0"
pytest = "^7.2.2"
pre-commit = "^4.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core @ git+https://github.com/python-poetry/poetry-core.git@master"]
build-backend = "poetry.core.masonry.api"
